--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <!-- header -->
         <header>
             <!-- logotipo -->
-            <a href="#"><img src="assets/logo.png" alt="Logo da empresa"></a>
+            <a href="#"><img src="assets/logo.png" alt="Logo da empresa" class="logo"></a>
 
             <!-- div para menu hambúrguer (em tela menores) -->
             <div class="toggle" onclick="toggleMenu();"></div>
 
             <!-- menu Links -->
             <ul class="links">
-                <ul><a href="https://www.starbucksathome.com/br/">Home</a></ul>
-                <ul><a href="https://www.starbucks.com/menu">Menu</a></ul>
-                <ul><a href="https://www.starbucks.com/rewards">Novidades</a></ul>
-                <ul><a href="https://www.starbucks.com/store-locator?map=39.635307,-101.337891,5z">Lojas</a></ul>
+                <li><a href="https://www.starbucksathome.com/br/" target="_blank">Home</a></li>
+                <li><a href="https://www.starbucks.com/menu" target="_blank">Menu</a></li>
+                <li><a href="https://www.starbucks.com/rewards" target="_blank">Novidades</a></li>
+                <li><a href="https://www.starbucks.com/store-locator?map=39.635307,-101.337891,5z" target="_blank">Lojas</a></li>
             </ul>
         </header>
 
@@ -53,6 +53,13 @@
             <li><img src="assets/thumb1.png" onclick="imgSlider('assets/img1.png'); changeCircleColor('#017143')"></li>
             <li><img src="assets/thumb2.png" onclick="imgSlider('assets/img1.png'); changeCircleColor('#eb7495')"></li>
             <li><img src="assets/thumb3.png" onclick="imgSlider('assets/img1.png'); changeCircleColor('#d752b1')"></li>
+        </ul>
+
+        <!-- lista redes sociais -->
+        <ul class="sociais">
+            <li><a href="https://pt-br.facebook.com/" target="_blank"><img src="assets/facebook.png" alt="logo_facebook"></a></li>
+            <li><a href="https://www.threads.net/?hl=en" target="_blank"><img src="assets/threads.png" alt="logo_threads" id="threads"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><img src="assets/instagram.png" alt="logo_instagram"></a></li>
         </ul>
 
 
